// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Article / Code Block Default Code Block 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <pre
    className="sc-AxgMl jdQkdf"
    tabIndex="0"
  >
    <code
      class="language-javascript"
    >
      import { Greeting } from './Greeting';

export default {
  title: 'Default Greeting',
  // Pass the component to allow the docs addon access to the metadata!
  component: Greeting,
};

    </code>
  </pre>,
]
`;

exports[`Storyshots Article / Inline Code Default Inline Code 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <code
    className="sc-AxheI hLvSCD"
  >
    import { Greeting } from './Greeting';
  </code>,
]
`;

exports[`Storyshots Article / Inline Sharp Image Default Inline Sharp Image 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <div
    className=" gatsby-image-wrapper"
    style={
      Object {
        "maxHeight": null,
        "maxWidth": null,
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      aria-hidden={true}
      style={
        Object {
          "paddingBottom": "100%",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden={true}
      src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAUABQDASIAAhEBAxEB/8QAGQABAAIDAAAAAAAAAAAAAAAAAAIFAQME/8QAFAEBAAAAAAAAAAAAAAAAAAAAAP/aAAwDAQACEAMQAAABvefbXFqDEQkD/8QAGxAAAwACAwAAAAAAAAAAAAAAAQIDEBEABBL/2gAIAQEAAQUCY+VnZaNyg3LrTZKnGgMf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPwEf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPwEf/8QAGhAAAgMBAQAAAAAAAAAAAAAAAREAEDFRAv/aAAgBAQAGPwInkQr0OiMrFeV//8QAGRABAQEBAQEAAAAAAAAAAAAAAQARMSFB/9oACAEBAAE/IQR4Nt565s2QdQIR4vk3U++JCNBdv//aAAwDAQACAAMAAAAQAAc8/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPxAf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPxAf/8QAHRABAAICAgMAAAAAAAAAAAAAAQARITFBYVFxsf/aAAgBAQABPxCmmwr6lP1nHxMXEarZIaLSHUTqVuzifCICBOyVAH1F2Z//2Q=="
      style={
        Object {
          "height": "100%",
          "left": 0,
          "objectFit": "cover",
          "objectPosition": "center",
          "opacity": 1,
          "position": "absolute",
          "top": 0,
          "transitionDelay": "500ms",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 700px) 100vw, 700px"
        srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
        type="image/webp"
      />
      <source
        sizes="(max-width: 700px) 100vw, 700px"
        srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
      />
      <img
        alt="Alternative text for an image."
        loading="lazy"
        onLoad={[Function]}
        sizes="(max-width: 700px) 100vw, 700px"
        src="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg"
        srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source type='image/webp' srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><source srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" src=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg\\" alt=\\"Alternative text for an image.\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>,
]
`;

exports[`Storyshots Article Default Article 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <article
    className="sc-Axmtr cAbpGW"
  >
    <h2>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque non arcu eu efficitur. Aliquam non convallis quam. Donec a pretium velit, non congue magna. Maecenas tempor lectus id tempus lobortis. Curabitur in vestibulum nunc. Suspendisse vitae posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut gravida, odio at interdum fermentum, justo nibh varius enim, vitae pulvinar est mauris quis purus. Donec scelerisque sapien a congue luctus. Maecenas suscipit lacinia pretium. Maecenas sed suscipit augue. 
    </p>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque non arcu eu efficitur. Aliquam non convallis quam. Donec a pretium velit, non congue magna. Maecenas tempor lectus id tempus lobortis. Curabitur in vestibulum nunc. Suspendisse vitae posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut gravida, odio at interdum fermentum, justo nibh varius enim, vitae pulvinar est mauris quis purus. Donec scelerisque sapien a congue luctus. Maecenas suscipit lacinia pretium. Maecenas sed suscipit augue. 
    </p>
    <blockquote>
      <em>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </em>
    </blockquote>
    <ul>
      

      <li>
        Sed pellentesque non arcu eu efficitur.
      </li>
      

      <li>
        Aliquam non convallis quam.
      </li>
      

      <li>
        Donec a pretium velit, non congue magna.
      </li>
      

    </ul>
    <figure
      className="kg-card kg-image-card kg-card-hascaption fluid-image"
      style={
        Object {
          "flex": "1 1 0",
        }
      }
    >
      <div
        className="kg-image gatsby-image-wrapper"
        style={
          Object {
            "maxHeight": null,
            "maxWidth": null,
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          aria-hidden={true}
          style={
            Object {
              "paddingBottom": "100%",
              "width": "100%",
            }
          }
        />
        <img
          alt=""
          aria-hidden={true}
          src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAUABQDASIAAhEBAxEB/8QAGQABAAIDAAAAAAAAAAAAAAAAAAIFAQME/8QAFAEBAAAAAAAAAAAAAAAAAAAAAP/aAAwDAQACEAMQAAABvefbXFqDEQkD/8QAGxAAAwACAwAAAAAAAAAAAAAAAQIDEBEABBL/2gAIAQEAAQUCY+VnZaNyg3LrTZKnGgMf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPwEf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPwEf/8QAGhAAAgMBAQAAAAAAAAAAAAAAAREAEDFRAv/aAAgBAQAGPwInkQr0OiMrFeV//8QAGRABAQEBAQEAAAAAAAAAAAAAAQARMSFB/9oACAEBAAE/IQR4Nt565s2QdQIR4vk3U++JCNBdv//aAAwDAQACAAMAAAAQAAc8/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPxAf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPxAf/8QAHRABAAICAgMAAAAAAAAAAAAAAQARITFBYVFxsf/aAAgBAQABPxCmmwr6lP1nHxMXEarZIaLSHUTqVuzifCICBOyVAH1F2Z//2Q=="
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            sizes="(max-width: 700px) 100vw, 700px"
            srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
            type="image/webp"
          />
          <source
            sizes="(max-width: 700px) 100vw, 700px"
            srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
          />
          <img
            alt="alt text for pamela"
            loading="lazy"
            onLoad={[Function]}
            sizes="(max-width: 700px) 100vw, 700px"
            src="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg"
            srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source type='image/webp' srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><source srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" src=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg\\" alt=\\"alt text for pamela\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <figcaption>
        Curabitur in vestibulum nunc. 
      </figcaption>
    </figure>
    <pre
      className="sc-AxgMl jdQkdf"
      tabIndex="0"
    >
      <code
        className="sc-AxheI hLvSCD"
      >
        import { Greeting } from './Greeting';

export default {
  title: 'Default Greeting',
  // Pass the component to allow the docs addon access to the metadata!
  component: Greeting,
};

      </code>
    </pre>
    <h3
      id="image-sizes"
    >
      Here is a smaller heading. It is not a sharp image.
    </h3>
    <figure
      className="kg-card kg-image-card"
    >
      <img
        alt="a scenic view of a landscape."
        className="kg-image"
        src="https://upload.wikimedia.org/wikipedia/commons/9/93/Denali_National_Park_Polychrome_Mountains_Wide_17350px.jpg"
      />
    </figure>
  </article>,
]
`;

exports[`Storyshots Article Empty Article 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <article
    className="sc-Axmtr cAbpGW"
  >
    Nothing to see here.
  </article>,
]
`;

exports[`Storyshots DottedWrapper Default Dotted Wrapper 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-AxmLO iNeMGg"
    spacing={10}
  >
    <div
      className="sc-fzozJi fnhECQ"
    >
      Here is some text with a dotted border!
    </div>
  </div>,
]
`;

exports[`Storyshots Layout / Header Dark Theme Icon 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-fznKkj hlWdTI"
  >
    <div
      className="sc-fzqBZW cSSpHg"
    >
      <div
        className="sc-fznZeY dDkIRu"
      >
        Will Hall's
      </div>
      <div
        className="sc-fzqNJr vcQPy"
        onClick={[Function]}
      >
        ☾
      </div>
    </div>
    <p
      className="sc-fzokOt fFyPLq"
    >
      journey through everything
    </p>
    <nav
      className="sc-fzoLsD iwKFen"
    >
      <a
        active={false}
        className="sc-fzpans dTgMXs"
        href="url"
      >
        label
      </a>
      <div
        className="sc-fznyAO equZwR"
      />
    </nav>
  </header>,
]
`;

exports[`Storyshots Layout / Header Default Header 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-fznKkj hlWdTI"
  >
    <div
      className="sc-fzqBZW cSSpHg"
    >
      <div
        className="sc-fznZeY dDkIRu"
      >
        Will Hall's
      </div>
      <div
        className="sc-fzqNJr vcQPy"
        onClick={[Function]}
      >
        ☼
      </div>
    </div>
    <p
      className="sc-fzokOt fFyPLq"
    >
      journey through everything
    </p>
    <nav
      className="sc-fzoLsD iwKFen"
    >
      <a
        active={false}
        className="sc-fzpans dTgMXs"
        href="url"
      >
        label
      </a>
      <div
        className="sc-fznyAO equZwR"
      />
    </nav>
  </header>,
]
`;

exports[`Storyshots Layout / Header With Tag 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-fznKkj hlWdTI"
  >
    <div
      className="sc-fzqBZW cSSpHg"
    >
      <div
        className="sc-fznZeY dDkIRu"
      >
        Will Hall's
      </div>
      <div
        className="sc-fzqNJr vcQPy"
        onClick={[Function]}
      >
        ☼
      </div>
    </div>
    <p
      className="sc-fzokOt fFyPLq"
    >
      journey through everything
    </p>
    <nav
      className="sc-fzoLsD iwKFen"
    >
      <a
        active={false}
        className="sc-fzpans dTgMXs"
        href="url"
      >
        label
      </a>
      <div
        className="sc-fznyAO equZwR"
      >
        code
      </div>
    </nav>
  </header>,
]
`;

exports[`Storyshots Layout / SEO Default SEO 1`] = `
<link
  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
  rel="stylesheet"
/>
`;

exports[`Storyshots Layout Default Layout 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <main
    className="sc-fzoyAV fQLoFM"
  >
    <header
      className="sc-fznKkj hlWdTI"
    >
      <div
        className="sc-fzqBZW cSSpHg"
      >
        <div
          className="sc-fznZeY dDkIRu"
        >
          Will Hall's
        </div>
        <div
          className="sc-fzqNJr vcQPy"
          onClick={[Function]}
        >
          ☼
        </div>
      </div>
      <p
        className="sc-fzokOt fFyPLq"
      >
        journey through everything
      </p>
      <nav
        className="sc-fzoLsD iwKFen"
      >
        <a
          active={false}
          className="sc-fzpans dTgMXs"
          href="url"
        >
          label
        </a>
        <div
          className="sc-fznyAO equZwR"
        />
      </nav>
    </header>
    <h1
      className="sc-fzpjYC hoGGby"
    >
      Content Goes Here
    </h1>
    <footer
      className="sc-fzoXzr kCVjXK"
    >
      <p>
        © Will Hall 2020
      </p>
      <p
        className="sc-fzoLag bOWdhx"
        data-testid="cookie-manager"
        onClick={[Function]}
      >
        Manage Cookies
      </p>
    </footer>
  </main>,
]
`;

exports[`Storyshots Post / PostCard Default Post Card 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-AxmLO iNeMGg sc-fzoXWK jqqEOk"
    spacing={10}
  >
    <a
      aria-label="This post is pretty cool and also epic."
      className="sc-fzpmMD kfYypo"
      href="/post-title"
    >
      <div
        className="sc-fznxsB kImwrM"
      >
        <div
          className="sc-fznJRM jueHNJ"
        >
          <h1
            className="sc-fznWqX nAaoJ"
          >
            Post title
          </h1>
        </div>
        <div
          className="sc-fznJRM jueHNJ"
        >
          <div
            className="sc-fzoiQi ccAVvj"
          >
            This post is pretty cool and also epic.
          </div>
        </div>
        <div
          className="sc-fznJRM jueHNJ"
        >
          <a
            href="/tag/tag"
          >
            Tag
          </a>
          <div
            className="sc-fzqARJ kLGNDI"
          />
          Thu, 01 Jan 1970 00:00:00 GMT
        </div>
        <div
          className="sc-fznJRM jueHNJ"
        >
          <div>
            3
             mins
          </div>
        </div>
      </div>
    </a>
  </div>,
]
`;

exports[`Storyshots Post / PostInfo Default Post Info 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-fznxsB kImwrM"
  >
    <div
      className="sc-fznJRM jueHNJ"
    >
      <h1
        className="sc-fznWqX nAaoJ"
      >
        Post title
      </h1>
    </div>
    <div
      className="sc-fznJRM jueHNJ"
    >
      <div
        className="sc-fzoiQi ccAVvj"
      >
        This post is pretty cool and also epic.
      </div>
    </div>
    <div
      className="sc-fznJRM jueHNJ"
    >
      <a
        href="/tag/tag"
      >
        Tag
      </a>
      <div
        className="sc-fzqARJ kLGNDI"
      />
      Thu, 01 Jan 1970 00:00:00 GMT
    </div>
    <div
      className="sc-fznJRM jueHNJ"
    >
      <div>
        3
         mins
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Post Default Post 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <article
    className="sc-fzoyTs hqbvsD"
  >
    <div
      className="sc-AxmLO iNeMGg sc-fzoNJl iEeaeB"
      spacing={10}
    >
      <div
        className="sc-fznxsB kImwrM"
      >
        <div
          className="sc-fznJRM jueHNJ"
        >
          <h1
            className="sc-fznWqX nAaoJ"
          >
            Post title
          </h1>
        </div>
        <div
          className="sc-fznJRM jueHNJ"
        >
          <a
            href="/tag/tag"
          >
            Tag
          </a>
          <div
            className="sc-fzqARJ kLGNDI"
          />
          Thu, 01 Jan 1970 00:00:00 GMT
        </div>
        <div
          className="sc-fznJRM jueHNJ"
        >
          <div>
            3
             mins
          </div>
        </div>
      </div>
      <article
        className="sc-Axmtr cAbpGW"
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque non arcu eu efficitur. Aliquam non convallis quam. Donec a pretium velit, non congue magna. Maecenas tempor lectus id tempus lobortis. Curabitur in vestibulum nunc. Suspendisse vitae posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut gravida, odio at interdum fermentum, justo nibh varius enim, vitae pulvinar est mauris quis purus. Donec scelerisque sapien a congue luctus. Maecenas suscipit lacinia pretium. Maecenas sed suscipit augue. 
        </p>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque non arcu eu efficitur. Aliquam non convallis quam. Donec a pretium velit, non congue magna. Maecenas tempor lectus id tempus lobortis. Curabitur in vestibulum nunc. Suspendisse vitae posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut gravida, odio at interdum fermentum, justo nibh varius enim, vitae pulvinar est mauris quis purus. Donec scelerisque sapien a congue luctus. Maecenas suscipit lacinia pretium. Maecenas sed suscipit augue. 
        </p>
        <blockquote>
          <em>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </em>
        </blockquote>
        <ul>
          

          <li>
            Sed pellentesque non arcu eu efficitur.
          </li>
          

          <li>
            Aliquam non convallis quam.
          </li>
          

          <li>
            Donec a pretium velit, non congue magna.
          </li>
          

        </ul>
        <figure
          className="kg-card kg-image-card kg-card-hascaption fluid-image"
          style={
            Object {
              "flex": "1 1 0",
            }
          }
        >
          <div
            className="kg-image gatsby-image-wrapper"
            style={
              Object {
                "maxHeight": null,
                "maxWidth": null,
                "overflow": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              aria-hidden={true}
              style={
                Object {
                  "paddingBottom": "100%",
                  "width": "100%",
                }
              }
            />
            <img
              alt=""
              aria-hidden={true}
              src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAUABQDASIAAhEBAxEB/8QAGQABAAIDAAAAAAAAAAAAAAAAAAIFAQME/8QAFAEBAAAAAAAAAAAAAAAAAAAAAP/aAAwDAQACEAMQAAABvefbXFqDEQkD/8QAGxAAAwACAwAAAAAAAAAAAAAAAQIDEBEABBL/2gAIAQEAAQUCY+VnZaNyg3LrTZKnGgMf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPwEf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPwEf/8QAGhAAAgMBAQAAAAAAAAAAAAAAAREAEDFRAv/aAAgBAQAGPwInkQr0OiMrFeV//8QAGRABAQEBAQEAAAAAAAAAAAAAAQARMSFB/9oACAEBAAE/IQR4Nt565s2QdQIR4vk3U++JCNBdv//aAAwDAQACAAMAAAAQAAc8/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPxAf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPxAf/8QAHRABAAICAgMAAAAAAAAAAAAAAQARITFBYVFxsf/aAAgBAQABPxCmmwr6lP1nHxMXEarZIaLSHUTqVuzifCICBOyVAH1F2Z//2Q=="
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "100%",
                }
              }
            />
            <picture>
              <source
                sizes="(max-width: 700px) 100vw, 700px"
                srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
                type="image/webp"
              />
              <source
                sizes="(max-width: 700px) 100vw, 700px"
                srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
              />
              <img
                alt="alt text for pamela"
                loading="lazy"
                onLoad={[Function]}
                sizes="(max-width: 700px) 100vw, 700px"
                src="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg"
                srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "100%",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source type='image/webp' srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><source srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" src=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg\\" alt=\\"alt text for pamela\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </div>
          <figcaption>
            Curabitur in vestibulum nunc. 
          </figcaption>
        </figure>
        <pre
          className="sc-AxgMl jdQkdf"
          tabIndex="0"
        >
          <code
            className="sc-AxheI hLvSCD"
          >
            import { Greeting } from './Greeting';

export default {
  title: 'Default Greeting',
  // Pass the component to allow the docs addon access to the metadata!
  component: Greeting,
};

          </code>
        </pre>
        <h3
          id="image-sizes"
        >
          Here is a smaller heading. It is not a sharp image.
        </h3>
        <figure
          className="kg-card kg-image-card"
        >
          <img
            alt="a scenic view of a landscape."
            className="kg-image"
            src="https://upload.wikimedia.org/wikipedia/commons/9/93/Denali_National_Park_Polychrome_Mountains_Wide_17350px.jpg"
          />
        </figure>
      </article>
    </div>
  </article>,
]
`;
